this should fix the sodabar overflow problem

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -515,12 +515,11 @@ body > div > section {
   color: #fff;             /* white */
 }
 #sodabar {
-  height: 16px;
-  padding: 5px 4px;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 15px;
+  height: 25px;
+  padding: 0 4px;
   background-color: #333;  /* black */
   border: 1px solid #555;
   border-width: 1px 0 0;
@@ -528,6 +527,7 @@ body > div > section {
 }
 #sodabar a {
   color: #fff;  /* white */
+  line-height: 24px;
 }
 .edit_link {
   float: right;
